// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="page-container"
  >
    <header>
      <span
        class="logo"
      >
        Hyödyntämätön
      </span>
    </header>
    <main>
      App which translates beer reviews to your language.
      <button
        class="btn"
      >
        Log in with your Untappd account
      </button>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Home page matches snapshot when user is logged in 1`] = `
<DocumentFragment>
  <div
    class="page-container"
  >
    <button
      class="btn"
    >
      Pubs Nearby
    </button>
    <button
      class="btn"
    >
      Account
    </button>
    <button
      class="btn"
    >
      About
    </button>
  </div>
</DocumentFragment>
`;
